
  * Fixed a bug in player. Now Prev Track when stopped update the info
  * Now you can edit the rating of a track from the Player current track
    info. To do it move the mouse up and down while clicking on rating starts.
  * Added bitrate, rating, playcount, lastplay, added time  to tracks database
  * Fixed crash when using 'Edit labes' in artists or songs with no artist
    or no songs selected


2009-06-25 0.1.1
  * Play/Enqueue in RadioStations was not implemented. Fixed now.
  * Added Custom commands that are accesible from contextual menu in Artist,
    Albums, Songs and Playlist 
  * Removed the need of the wxWidgets media library not present by default
    in many distributions.
  * Added amazon search engine for covers.
  * The new/updated/removed covers are updated in library too.
  * Double click on artistname or albumname in player panel current track
    will select the artist or the album in the library.
  * Fixed bug in cover editor that blocked gui randomly
  * The tracks editor now can edit images stored in id3tags
  * Fixed bug saving special chars to id3 tags
  * Player shows the cover stored in the id3tags before attempt to load the
    album cover.
  * Added support to ReplayGain tags
  * Show the bitrate of the current track.
  * Improved library update. Now more faster.
  * Added Play/Enqueue options to Last.fm panel items
  * Playlist current track now follow theme color
  * Last.fm preferences shouldn't be enabled if the user or pass is not
    filled
  * Mouse wheel support in the volumen control window
  * Create ~/.guayadeque/LinkIcons dir if doesnt exists to store the
    Links Icons

2009-06-09 0.1.0
  * Now if Next Track is clicked at the last track in playlist and Play Random 
    is enabled it will add a new random track to the playlist
  * Fixed bug in some listbox that made the context menu to appear twice
  * Fixed a bug when dragging tracks in the playlist and the list were
    scrolled down.