@@ -1,0 +1,66 @@
+// -------------------------------------------------------------------------------- //
+//	Copyright (C) 2008-2009 J.Rios
+//	anonbeat@gmail.com
+//
+//    This Program is free software; you can redistribute it and/or modify
+//    it under the terms of the GNU General Public License as published by
+//    the Free Software Foundation; either version 2, or (at your option)
+//    any later version.
+//
+//    This Program is distributed in the hope that it will be useful,
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+//    GNU General Public License for more details.
+//
+//    You should have received a copy of the GNU General Public License
+//    along with this program; see the file LICENSE.  If not, write to
+//    the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
+//    http://www.gnu.org/copyleft/gpl.html
+//
+// -------------------------------------------------------------------------------- //
+#ifndef PLAYLISTPANEL_H
+#define PLAYLISTPANEL_H
+
+#include "DbLibrary.h"
+#include "PlayerPanel.h"
+
+
+#include <wx/string.h>
+#include <wx/stattext.h>
+#include <wx/gdicmn.h>
+#include <wx/font.h>
+#include <wx/colour.h>
+#include <wx/settings.h>
+#include <wx/bitmap.h>
+#include <wx/image.h>
+#include <wx/icon.h>
+#include <wx/statbmp.h>
+#include <wx/textctrl.h>
+#include <wx/sizer.h>
+#include <wx/panel.h>
+#include <wx/statline.h>
+#include <wx/listctrl.h>
+#include <wx/splitter.h>
+#include <wx/frame.h>
+
+// -------------------------------------------------------------------------------- //
+class guPlayListPanel : public wxPanel
+{
+  private :
+    DbLibrary *         m_Db;
+    guPlayerPanel *     m_PlayerPanel;
+
+    wxSplitterWindow *  m_MainSplitter;
+    wxListCtrl *        m_NamesListCtrl;
+    wxListCtrl *        m_DetailsListCtrl;
+
+
+  public :
+    guPlayListPanel( wxWindow * parent, DbLibrary * db, guPlayerPanel * playerpanel );
+    ~guPlayListPanel();
+
+    void MainSplitterOnIdle( wxIdleEvent &event );
+};
+
+#endif
+// -------------------------------------------------------------------------------- //
